tests/ui/suggestions/path-by-value.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/path-by-value.rs:3:9
   |
LL | fn f(p: Path) { }
   |         ^^^^ doesn't have a size known at compile-time
   |
   = help: within `Path`, the trait `Sized` is not implemented for `[u8]`
note: required because it appears within the type `Path`
  --> $SRC_DIR/std/src/path.rs:LL:COL
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn f(p: &Path) { }
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
